# cxxDojo

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  ackermann.cpp  ahoCorasick.cpp  ahoCorasick.dct  aho_corasick.cpp  aho_corasick.hpp  allocator.cpp  allocator.hpp  any_iterator.cpp  any_iterator.hpp  apply.cpp  apply.hpp  asio.echo.client.cpp  asio.echo.server.cpp  assert.cpp  assert.hpp  async.cpp  avl_tree.cpp  avl_tree.hpp  barrier.cpp  base64.cpp  base64.decode.cpp  base64.encode.cpp  base64.encode.hpp  base64.hpp  bayes.cpp  bayes.hpp  bellmanFord.cpp  bellman_ford.cpp  bellman_ford.hpp  bind.cpp  blackScholes.cpp  black_scholes.cpp  bloom.cpp  bloom_filter.cpp  bloom_filter.hpp  (+266 more)
asm/: Makefile  atomic.cpp  atomic.s  functionCall.cpp  functionCall.s  plt.cpp  plt.s
deprecated/: black_scholes.cpp  box_muller.cpp  box_muller.hpp  copy_vs_move.cpp  count_bits.cpp  count_bits.hpp  fdm.cpp  gcd.cpp  gcd.hpp  has_type.cpp  integration.cpp  integration.hpp  interpolation.cpp  interpolation.hpp  laplace_smoothing.cpp  laplace_smoothing.hpp  linear_regression.cpp  linear_regression.hpp  member_offset.cpp  member_offset.hpp  ode.cpp  par.cpp  ring_buffer_lb.cpp  ring_buffer_lb.hpp  union_cast.cpp  union_cast.hpp  virtual_range.cpp
gsl/: CMakeLists.txt  Makefile  correlation.cpp  covariance.cpp  interpolation.cpp  linear.regression.cpp  mean.cpp  page_rank.cpp  pca.cpp  variance.cpp
insmod/: Makefile  cxx_dojo_module.c  testToUpperChar.c  toUpperChar.c
jni/: Main.java  Makefile  main.cpp
lua/: Makefile  main  main.cpp  main.lua
shared/: Makefile  (+4 more)
(+16 files in other folders)
